# fast-mahjong

./: Cargo.toml  README.md  pyproject.toml  test.py
fast_mahjong/: __init__.py
src/: lib.rs
