[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.poetry]
name = "fast-mahjong"
version = "0.1.0"
description = ""
authors = ["Ryoya Nara"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"

[project]
name = "fast-mahjong-rs"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
